# openclaw-dash

./: .gitignore  .gitmessage  .pr-workflow-state.json  CHANGELOG.md  CONTRIBUTING.md  FEATURE_CONNECTION_WARNINGS.md  LICENSE  README.md  SECURITY_FIXES.md  SECURITY_FIX_SUMMARY.md  START_HERE.md  TASK_COMPLETION_REPORT.md  TODO_FIXES_SUMMARY.md  config.example.toml  custom_paths_validator.py  discover_custom_paths_fixed.py  pyproject.toml  run_screenshot.py  test-structured-commit.txt  test_model_discovery_fixes.md  verify_demo.py
.github/workflows/: ci.yml  hdls-attribution-guard.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  Home.md  INSTALLATION.md  Installation.md  Integrated-Tools.md  PR_WORKFLOW_INTEGRATION.md  TOOLS.md  Usage.md  WIDGETS.md
firmware/heltec-panel/: README.md  platformio.ini
firmware/heltec-panel/src/: main.cpp
memory/: 2026-02-20.md  2026-02-22.md
prototypes/nes-snes-analyzer/: IMPLEMENTATION.md  README.md  analyzer.py  test_data_generator.py
prototypes/nes-snes-analyzer/test_roms/: test_basic.nes  test_battery.nes  test_copier.smc  test_hirom.sfc  test_lorom.smc  test_trainer.nes
prototypes/obd2-diagnostic-tui/: IMPLEMENTATION.md  README.md  codes.py  logger.py  obd2_tui.py  protocols.py
research/: EJ22_Performance_Reliability_Guide.md  EJ22_dlorp_97_Impreza_Quick_Reference.md  GC8_Impreza_HVAC_Troubleshooting_Guide.md  GC8_Impreza_Winter_Driving_Suspension_Guide.md
scripts/: take_screenshot.py
src/hermes_dash/: __init__.py  app.py  cli.py  commands.py  config.py  demo.py  exporter.py  offline.py  pr_workflow.py  settings_manager.py  tool_schemas.py  version.py
src/hermes_dash/automation/: __init__.py  backup.py  deps_auto.py  pr_auto.py
src/hermes_dash/collectors/: __init__.py  activity.py  agents.py  alerts.py  base.py  billing.py  cache.py  channels.py  cron.py  gateway.py  hermes_cli.py  logs.py  repos.py  resources.py  sessions.py
src/openclaw_dash/: __init__.py  app.py  cli.py  commands.py  config.py  demo.py  exporter.py  offline.py  pr_orchestrator.py  pr_workflow.py  settings_manager.py  themes.py  tool_schemas.py  version.py
tests/: __init__.py  conftest.py  test_activity_widget.py  test_agents.py  test_alerts.py  test_ascii_art.py  test_audit_tool.py  test_automation.py  test_billing.py  test_channels_widget.py  test_cli.py  test_collapsible_panel.py  test_collector_cache.py  test_collectors.py  test_commands.py  test_config.py  test_cron_widget.py  test_error_handling.py  test_exporter.py  test_gateway_integration.py  test_help_panel.py  test_hermes_cli.py  test_input_pane.py  test_logs.py  test_logs_widget.py  test_metric_boxes.py  test_metrics.py  test_metrics_widget.py  test_model_discovery.py  test_models_cli.py  test_notifications.py  test_offline.py  test_openclaw_cli.py  test_panel_focus.py  test_pr_auto_workflow.py  test_pr_describe.py  test_pr_orchestrator.py  test_pr_workflow.py  test_resources.py  test_responsive.py  (+13 more)
tests/widgets/: test_gateway_status.py  test_sessions_panel.py
(+134 files in other folders)
