[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-dash"
version = "0.1.0"
description = "At-a-glance TUI dashboard for OpenClaw gateway monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "dlorp" }]
keywords = ["openclaw", "dashboard", "tui", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
openclaw-dash = "openclaw_dash.cli:main"

[project.urls]
Repository = "https://github.com/dlorp/openclaw-dash"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_dash"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/openclaw_dash/tools/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
