[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-dash"
version = "0.5.0"
description = "TUI dashboard for Hermes Agent monitoring"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "dlorp" }]
keywords = ["hermes", "agent", "dashboard", "tui", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "psutil>=5.9.0",
    "msgpack>=1.2.1",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt>=1.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
hermes-dash = "hermes_dash.cli:main"

[project.urls]
Repository = "https://github.com/dlorp/hermes-dash"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_dash"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/hermes_dash/tools/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
